# resume-ai

./: .env.example  .gitignore  .gitmodules  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  Dockerfile  PROJECT_STATUS.md  README.md  README_ANALYTICS.md  README_AUTOAPPLY.md  add_tracking.sh  analytics_db.py  analytics_startup.py  analytics_tracker.py  auto_test.py  autoapply-worker.service  autoapply.service  backup.py  bug_report.py  daily_reporter.py  dashboard.py  deploy_all.sh  deploy_analytics.sh  docker-compose.yml  generate_seo_pages.py  github_pages_deploy.sh  health-check.service  health-check.timer  health_check.py  health_monitor.py  maintenance.py  marketing_cron.py  monitor.py  nginx_domain.conf  nginx_resumeai.conf  pricing.json  redeploy.sh  (+11 more)
.claude/: launch.json
_extracted_worker/: .env.example  Dockerfile  MIGRATION_NOTES.md  README.md  pyproject.toml
_extracted_worker/tests/: test_autoapply_linkedin.py  test_health.py  test_scrapers.py
_extracted_worker/worker/: config.py  crypto.py  db.py  deps.py  main.py
_extracted_worker/worker/ai/: cover_letter.py  resume.py
_extracted_worker/worker/ai/prompts/: cover_letter.txt  resume.txt
_extracted_worker/worker/autoapply/: careerops.py  common.py  linkedin.py
_extracted_worker/worker/routes/: health.py  jobs.py
_extracted_worker/worker/scrapers/: adzuna.py  arbeitnow.py  remoteok.py  themuse.py
_rebuild-plan/: AUDIT_REPORT.md
api/: schemas.py  server.py
autoapply/: ats_filler.py  auto_apply_engine.py  autoapply_db.py  autoapply_main.py  config.py  (+6 more)
(+375 files in other folders)
